Fixed all remaining ??
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@408 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -226,7 +226,7 @@ An example of the application of the two procedures to the limit on $M_*$ from R
 	\label{fig:monojet_MstarMmed}
 \end{figure}
 
-\Todo{This plot needs to be clarified further: what is the statistics for the truncation with sHat, and does this cause the sudden drop at $\sqrt{g}$=2?}
+%\Todo{This plot needs to be clarified further: what is the statistics for the truncation with sHat, and does this cause the sudden drop at $\sqrt{g}$=2?}
 
 \subsection{Comments on unitarity considerations}
 
