--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -293,8 +293,8 @@ a representative dimension-8 operators can be chosen as benchmark, with the form
  
 $$\frac{1}{\Lambda^4} \bar{\chiDM} \gamma^{\mu} \chiDM B_{\mu \nu} H^{\dagger} D^{\nu} H$$
 
-In this case, the new physics scale is $\Lambda$ is connected with the coupling
-of the DM as $\displaystyle y_{\chiDM} = \frac{1}{\Lambda^{4}}$.\Todo{Is more detail needed here?}
+In this case, the new physics scale is $\Lambda$ is related to the coupling
+of the DM as $\displaystyle y_{\chiDM} = \frac{1}{\Lambda^{4}}$.%\Todo{Is more detail needed here?}
 An advantage of this operator is that it includes all signatures with EW bosons,
 allowing to assess the relative sensitivity of the various channels with the same model.  
 The kinematics for this operator is different with respect to other operators,
