--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -417,7 +417,8 @@ the results for this mixing angle according to the relevant cross-section. It ca
 that the kinematics of this model follows that of the equivalent jet+\MET model: only small changes are observed
 in the on-shell region, while the relevant distributions diverge when the mediator is off-shell. 
 For this reason, the same grid in \mmed, \mdm as for the scalar mediator
-of the jet+\MET search (Table~\ref{tab:mDMmMedScan_SP}) is chosen as a starting point. \Todo{Estimate the sensitivity and possibly prune parameter scan.}
+of the jet+\MET search (Table~\ref{tab:mDMmMedScan_SP}) is chosen as a starting point. 
+%\Todo{Estimate the sensitivity and possibly prune parameter scan.}
 The Yukawa coupling to DM $y_{DM}$ is set to 1, the 
 new physics coupling between scalar and SM Higgs $b$ = 3. Results for other values can be obtained via a 
 rescaling of the results for these parameters. 
