--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -534,7 +534,10 @@ Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$
 
 In this section, we consider a parallel situation to the vector and axial-vector mediators in the previous sections: a real scalar or a pseudoscalar where the associated scalar is decoupled at higher energies\sidenote{This assumption does not hold in a UV-complete model where the two components of the complex scalar mediator would be approximately degenerate.  The complex scalar case could be studied separately in the case of heavy flavor final states given the sufficiently different kinematics.}. This section is largely based on Refs.~\cite{Buckley:2014fba,Harris:2014hga,Haisch:2015ioa} which contain a thorough discussion of these models. 
 
-Assuming MFV, \spinzero resonances behave in a similar fashion as the SM Higgs boson~\footnote{If the mediators are pure singlets of the SM, their interactions with quarks are not $SU(2)_L$ invariant. To restore this invariance, one could include the mixing of such mediators with the Higgs sector. This leads to extra interactions and a more complex phenomenology with respect to what considered in this Section (for a more complete discussion, see Refs.~\ref{Buckley:2014fba,Haisch:2015ioa}). In the interest of simplicity, we do not include models including those interactions in this report towards early Run-2 benchmark models, but we give an example of a model of this kind in Appendix~\ref{sec:i2HDM}.}. Relative to the vector and axial-vector models discussed above, the scalar models are distinguished by the special consequences of the MFV assumption: the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
+Assuming MFV, \spinzero resonances behave in a similar fashion as the SM Higgs boson. If the mediators are pure singlets of the SM, their interactions with quarks are not $SU(2)_L$ invariant. To restore this invariance, one could include the mixing of such mediators with the Higgs sector. This leads to extra interactions and a more complex phenomenology with respect to what considered in this Section (for a more complete discussion, see Refs.~\cite{Buckley:2014fba,Haisch:2015ioa}). In the interest of simplicity, we do not study models including those interactions in this report as early Run-2 benchmark models, but we give an example of a model of this kind in Appendix~\ref{sec:i2HDM}. 
+
+Relative to the vector and axial-vector models discussed above, the scalar models are distinguished by the special consequences of the MFV 
+assumption: the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
 
 \begin{fullwidth}
   \begin{eqnarray} \mathcal{L}_{\phi} & = &
@@ -1039,7 +1042,7 @@ Constant colors indicate the lines along which the cross section scaling works p
 We propose to deliver collider results in the $\gq$--$\gDM$ plane using the following prescription, to ease reinterpretation through cross-section scaling:
 \begin{itemize}
 	\item Since the shapes of kinematic quantities do not change for different couplings, use the acceptance and efficiency for the available $\mDM=50$~\gev, $\mMed=300$~\gev grid point from the $\mMed$--$\mDM$ plane for the scalar and pseudo-scalar mediator. In case of the vector and axial-vector mediator, use the grid point $\mDM=150$~\gev, $\mMed=1$~\tev.
-	\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 1, 2, 3. For vector and axial vector mediator, choose $\mDM=150$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. \Todo{Waiting for scalar mediator calculation of perturbativity limit from J. Alcaraz.).}
+	\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 1, 2, 3. For vector and axial vector mediator, choose $\mDM=150$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. %\Todo{Waiting for scalar mediator calculation of perturbativity limit from J. Alcaraz.).}
 	\item Rescale the generator cross sections for on-shell resonance production along the lines of constant width in order to populate the whole $\gq$--$\gDM$ plane in the region $\Gamma_{\rm{min}}<\mMed$.
 The scaling follows from Eq.\,\ref{eq:monojet_scaling} which for the constant width implies:
 \begin{equation}
