--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -190,12 +190,12 @@ channels enhanced by parton density effects will be considered, so that we fix
 \esp\end{equation}
 all other elements of the matrices and vectors above being set to zero.
 
-\Todo{There is still an on-going study that should be finished very soon (by the end
-	of the week). The point is that CMS is fixing the $y$ parameters in the way that
-	the branching ratio of the scalar resonance into a monotop system is close to
-	100\%, while ATLAS is fixing y = lambda. We are investigating both cases so to
-	conclude whether this is good to keep both options allowed.
-	}
+%\Todo{There is still an on-going study that should be finished very soon (by the end
+%	of the week). The point is that CMS is fixing the $y$ parameters in the way that
+%	the branching ratio of the scalar resonance into a monotop system is close to
+%	100\%, while ATLAS is fixing y = lambda. We are investigating both cases so to
+%	conclude whether this is good to keep both options allowed.
+%	}
 
 
 \newthought{Implementation}
