--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -491,7 +491,7 @@ also leads to a mono-boson signature.
 The models considered in Section~\ref{sec:monojet_t_channel}
 present a relevant difference concerning final states with an electroweak boson.
 In the model in~\cite{Bell:2012rg}, both right- and left-handed mediators can radiate a Z boson,
-while only the left-handed mediator in~\cite{Bell:2012rg} allows for W and Z radiation.~\Todo{Check why this happens: question asked to A. Vichi.}
+while only the left-handed mediator in~\cite{Bell:2012rg} allows for W and Z radiation.
 
 The studies in this Section use the LO+PS UFO model from~\cite{Bell:2012rg} in \madgraph v2.2.3, 
 using \pythia 8 for the parton shower.
