Uli's last comment
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@409 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -54,7 +54,7 @@ couplings of Dark Matter to pairs of gauge-bosons.  Scalar fields may couple dir
 but must carry part of the electroweak vacuum expectation value.  One may thus consider a simple model where Dark Matter couples to a a scalar 
 singlet mediator, which mixes with the fields in the Higgs sector.
 \begin{equation}
-L\subset m_s S^2 + \lambda S^2H^2 +\lambda^{'} S H^2 + y S \chiDM \overline{\chiDM}
+L\subset \frac{1}{2} m_s S^2 + \lambda S^2|H|^2 +\lambda^{'} S |H|^2 + y S \chiDM \overline{\chiDM}
 \end{equation}
 Where H is a field in the Higgs sector that contains part of the electroweak vacuum expectation value, 
 S is a heavy scalar singlet and $\chiDM$ is a Dark Matter field. 
