--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -381,7 +381,8 @@ At leading order of $\sin\theta$, the $h^2 S$ term is fixed once the mass eigenv
 and mixing angle are specified.  The $h\,S^2$ term is not fixed and remains a free parameter of the model, depending on 
 the new physics coupling $b$. 
 
-This model has mono-X signatures through h/S mixing. If $m_S \gg m_h$ or $m_h \gg m_S$, this model is a case of the scalar model discussed in Section 2.2, with \mMed equal to the lighter of the two masses.
+This model also has mono-X signatures through h/S mixing. 
+If $m_S \gg m_h$ or $m_h \gg m_S$, this model is a case of the scalar model discussed in Section 2.2, with \mMed equal to the lighter of the two masses.
 
 \subsubsection{Parameter scan}
 
