Uli's comment on Peskin's comment
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@410 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -381,8 +381,9 @@ At leading order of $\sin\theta$, the $h^2 S$ term is fixed once the mass eigenv
 and mixing angle are specified.  The $h\,S^2$ term is not fixed and remains a free parameter of the model, depending on 
 the new physics coupling $b$. 
 
-This model also has mono-X signatures through h/S mixing. 
-If $m_S \gg m_h$ or $m_h \gg m_S$, this model is a case of the scalar model discussed in Section 2.2, with \mMed equal to the lighter of the two masses.
+This model also has mono-X signatures through $h/S$ mixing. This model is related to the scalar model discussed in Sec.~\ref{sec:monojet_scalar}
+in the case of $m_S \gg m_h$ or $m_h \gg m_S$ and  \mMed equal to the lighter of the two masses, albeit with different mono-Higgs signatures
+due to the $h S^2$ vertex. 
 
 \subsubsection{Parameter scan}
 
