Added mail to Peskin, default-added remaining non-answering contributors
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@411 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -1,7 +1,7 @@
 \noindent\href{mailto:nural.akchurin@cern.ch}{Nural Akchurin} 
 \emph{Texas Tech University, USA}\\
 \noindent\href{mailto:ece.akilli@cern.ch}{Ece Akilli} 
-\emph{Universit\'e de Gen\`eve, D\'epartement de Physique Nucl\'eaire et Corpusculaire, Switzerland}\\
+\emph{Universit\'e de Gen\`eve, DPNC, Switzerland}\\
 \noindent\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz Maestre} 
 \emph{Centro de Investigaciones Energ\'eticas Medioambientales y Tecnol\'ogicas (CIEMAT), Spain}\\
 \noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
@@ -20,8 +20,8 @@
 \emph{University of Wisconsin-Madison, USA}\\
 \noindent\href{mailto:j.beacham@cern.ch}{James Beacham} 
 \emph{Ohio State University, USA}\\
-\noindent\href{mailto:Alexander.Belyaev@cern.ch}{Alexander Belyaev} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:a.belyaev@soton.ac.uk}{Alexander S. Belyaev} 
+\emph{School of Physics and Astronomy, University of Southampton, United Kingdom}\\
 \noindent\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia (editor)} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:amelia.jean.brennan@cern.ch}{Amelia Jean Brennan} 
@@ -90,14 +90,16 @@
 \emph{Northwestern University, USA}\\
 \noindent\href{mailto:ulrich.haisch@physics.ox.ac.uk}{Ulrich Haisch} 
 \emph{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom}\\
+\noindent\href{mailto:roni@fnal.gov}{Roni Harnik} 
+\emph{Theoretical Physics Department, Fermilab, USA}\\
 \noindent\href{mailto:philip.coleman.harris@cern.ch}{Philip C. Harris} 
 \emph{CERN, Switzerland}\\
 \noindent\href{mailto:Kerstin.Hoepfner@cern.ch}{Kerstin Hoepfner} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{RWTH Aachen University, III. Physikalisches Institut A, Germany}\\
 \noindent\href{mailto:siew.yan.hoh@cern.ch}{Siew Yan Hoh} 
 \emph{National Centre for Particle Physics, Universiti Malaya, Malaysia}\\
 \noindent\href{mailto:schsu@uw.edu}{Shih-Chieh Hsu} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{University of Washington, USA}\\
 \noindent\href{mailto:valerio.ippolito@cern.ch}{Valerio Ippolito} 
 \emph{Laboratory for Particle Physics and Cosmology, Harvard University, USA}\\
 \noindent\href{mailto:thomas.jacques@unige.ch}{Thomas Jacques} 
@@ -117,7 +119,7 @@
 \noindent\href{mailto:Raman.Khurana@cern.ch}{Raman Khurana} 
 \emph{National Central University, Taiwan}\\
 \noindent\href{mailto:khristian.kotov@cern.ch}{Khristian Kotov} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{The Ohio State University, USA}\\
 \noindent\href{mailto:dmytro.kovalskyi@cern.ch}{Dmytro Kovalskyi} 
 \emph{MIT, USA}\\
 \noindent\href{mailto:suchita.kulkarni@oeaw.ac.at}{Suchita Kulkarni} 
@@ -152,8 +154,6 @@
 \emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
 \noindent\href{mailto:mrenna@fnal.gov}{Stephen Mrenna (editor)} 
 \emph{FNAL, USA}\\
-\noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M. Narayanan} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
 \noindent\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson} 
 \emph{University of California, Irvine, USA}\\
 \noindent\href{mailto:Sergio.Novaes@cern.ch}{S\'ergio F. Novaes} 
@@ -170,6 +170,8 @@
 \emph{Universit\`a di Padova, Italy}\\
 \noindent\href{mailto:Bjoern.Penning@cern.ch}{Bj\"orn Penning} 
 \emph{Imperial College London, United Kingdom}\\
+\noindent\href{mailto:mpeskin@slac.stanford.edu}{Michael E. Peskin} 
+\emph{SLAC, Stanford University, USA}\\
 \noindent\href{mailto:Deborah.Pinna@cern.ch}{Deborah Pinna} 
 \emph{University of Zurich, Switzerland}\\
 \noindent\href{mailto:massimiliano.procura@univie.ac.at}{Massimiliano Procura} 
@@ -195,7 +197,7 @@
 \noindent\href{mailto:Alexander.Schmidt@cern.ch}{Alexander Schmidt} 
 \emph{University of Hamburg, Germany}\\
 \noindent\href{mailto:Steven.Schramm@cern.ch}{Steven Randolph Schramm} 
-\emph{Université de Genève, Switzerland}\\
+\emph{Universit\'e de Gen\`eve, DPNC, Switzerland}\\
 \noindent\href{mailto:will.shepherd@gmail.com}{William Shepherd} 
 \emph{University of California Santa Cruz Department of Physics and Santa Cruz Institute for Particle Physics, USA, and Niels Bohr International Academy, University of Copenhagen, Denmark}\\
 \noindent\href{mailto:gurpreet.singh@cern.ch}{Gurpreet Singh} 
@@ -209,7 +211,7 @@
 \noindent\href{mailto:ttait@uci.edu}{Tim M. P. Tait} 
 \emph{Department of Physics and Astronomy, University of California, Irvine, USA}\\
 \noindent\href{mailto:Timothee.Theveneaux-Pelzer@cern.ch}{Timothee Theveneaux-Pelzer} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Laboratoire de Physique Corpusculaire, Clermont Universit\'e and Universit\'e Blaise Pascal and CNRS/IN2P3, Clermont-Ferrand, France}\\
 \noindent\href{mailto:M.C.Thomas@soton.ac.uk}{Marc Thomas} 
 \emph{Southampton University, United Kingdom}\\
 \noindent\href{mailto:Daniele.Trocino@cern.ch}{Daniele Trocino} 
@@ -245,4 +247,4 @@
 \noindent\href{mailto:a.zucchetta@cern.ch}{Alberto Zucchetta} 
 \emph{Universit\`a di Padova, Italy}\\
 \noindent\href{mailto:kzurek@berkeley.edu}{Kathryn Zurek} 
-\emph{NO INSTITUTE, NO COUNTRY}\\
+\emph{Berkeley Center for Theoretical Physics, University of California, Berkeley, and Theoretical Physics Group, Lawrence Berkeley National Laboratory, USA}\\
