Fixed figure placement. Tufte would not be pleased.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@412 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/AdditionalDetails.tex
+++ b/doc/tex/AdditionalDetails.tex
@@ -1,6 +1,6 @@
-\section{\texorpdfstring{Further information for baryonic \Zprime Model}{Further information for baryonic Z' Model}}
+\section*{\texorpdfstring{Further information for baryonic \Zprime Model}{Further information for baryonic Z' Model}}
 
-\subsection{Cross-section scaling}
+\subsection*{Cross-section scaling}
 
 The dependence of the cross section of the $pp \rightarrow H\chiDM\bar{\chiDM}+X$ process 
 on $g_{h \Zprime \Zprime}$ is shown in Figure~\ref{fig:vectorXSdeps}. 
