--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -296,22 +296,12 @@ is shown in Fig.~\ref{fig:EFT_kinematics}.\footnote{The use of a fixed width rat
 
 %CD: do we want to add more of the discussion here on why this happens? I would personally keep it short.
 
-\begin{figure}[hbpt!]
+\begin{figure*}[p!]
 	\centering
 	\subfloat[\MET{}]{
-		\includegraphics[width=0.7\linewidth]{figures/EFT/TruthETmiss_compEFTvsZprime_DM150_narrow.eps}
+		\includegraphics[width=0.5\linewidth]{figures/EFT/TruthETmiss_compEFTvsZprime_DM150_narrow.eps}
 	}
-	\caption{Comparison of the kinematic distributions at 14~\tev between a narrow \schannel mediator and the
-	corresponding D5 contact operator, at generator level for a jet+\MET{} signature. 
-	\label{fig:EFT_kinematics}}
-\end{figure}
-%\vskip-50pt %UGLLYYYYYYY
-\begin{figure*}[ht!]
-	\setcounter{subfigure}{1}
-	\centering
-%	\subfloat[\MET{}]{
-%		\includegraphics[width=0.7\linewidth]{figures/EFT/TruthETmiss_compEFTvsZprime_DM150_narrow.eps}
-%	}
+		\hfill
 	\subfloat[Center of mass energy $E_{cm}$]{
 	   \includegraphics[width=0.47\linewidth]{figures/EFT/TruthEcm_compEFTvsZprime_DM150_narrow.eps} 
 	}		
@@ -319,12 +309,17 @@ is shown in Fig.~\ref{fig:EFT_kinematics}.\footnote{The use of a fixed width rat
 		\includegraphics[width=0.47\linewidth]{figures/EFT/TruthPt_compEFTvsZprime_DM150_narrow.eps}
 	}
 		\hfill
-	\subfloat[DM transverse momentum (leading)]{
+	\subfloat[Leading DM transverse momentum]{
 		\includegraphics[width=0.47\linewidth]{figures/EFT/TruthDM1ptcompEFTvsZprime_DM150_narrow.eps} 
 		}
 	\subfloat[DM transverse momentum (sub-leading)]{
 		\includegraphics[width=0.47\linewidth]{figures/EFT/TruthDM2ptcompEFTvsZprime_DM150_narrow.eps} 
 	}
+	\vskip20pt
+		\caption{Comparison of the kinematic distributions at 14~\tev between a narrow \schannel mediator and the
+			corresponding D5 contact operator, at generator level for a jet+\MET{} signature. 
+			\label{fig:EFT_kinematics}}
+		
 \end{figure*}
 
 
@@ -333,7 +328,7 @@ is shown in Fig.~\ref{fig:EFT_kinematics}.\footnote{The use of a fixed width rat
 As already observed in Section~\ref{sub:parameter_scan_monojet}, varying the DM mass changes the kinematics,
 both in the simplified model and in the EFT case. This can be seen in Fig.~\ref{fig:EFT_kinematics_mDM}. 
 
-\begin{figure*}[hbpt!]
+\begin{figure*}[p!]
 	\centering
 	\subfloat[\MET{}, D5 operator]{
 		\includegraphics[width=0.47\linewidth]{figures/EFT/EFT_met}
