--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -23,9 +23,8 @@ an equally valid alternative.
 These models include those discussed in Secs.~\ref{sec:monojet_V} and \ref{sec:monojet_scalar}.
 In monojet analyses, i.e. when final states are selected with a few jets and \MET{}, observables and in particular the \MET{} spectrum depend upon the accuracy of the simulation of QCD radiation.
 For the vector and axial vector models, the current state of the art is  NLO+PS. It is particularly simple to obtain simulations for these processes at NLO+PS and even for merged samples at NLO accuracy, starting from SM implementations.  We therefore recommend simulations to be performed at NLO+PS, and in case multi-jet observables are employed,  by merging samples with different multiplicities. 
-Results at such accuracy can be obtained either in dedicated implementations, such as that of  \powheg \cite{Haisch:2013ata}, or via general purpose NLO tools like \madgraph employing available UFO models at NLO 
-\footnote{A testing version of the full set of these UFO models has been made available
-only in June 2015 \cite{NewMadgraphModels}. For this reason, it was not used as part of the studies of this Forum on initial Run-2 benchmark models. Nevertheless, we encourage further study of these UFO models by the ATLAS and CMS collaborations.}.
+Results at such accuracy can be obtained either in dedicated implementations, such as that of  \powheg \cite{Haisch:2013ata}, or via general purpose NLO tools like \madgraph employing available UFO models at NLO. A testing version of the full set of these UFO models has been made available
+only in June 2015 \cite{NewMadgraphModels}. For this reason, it was not used as part of the studies of this Forum on initial Run-2 benchmark models. Nevertheless, we encourage further study of these UFO models by the ATLAS and CMS collaborations.
 
 A study using POWHEG~\cite{Haisch:2013ata,Fox:2012ru} has shown that the NLO corrections result in a substantial reduction in the dependence on the choice of the renormalization and factorization scales and hence a reduced theoretical uncertainty on the signal prediction. For the central choice of renormalization and factorization scales, the NLO corrections also provide a minor enhancement in the cross section due to the jet veto that has been so far employed in Run-1 analyses.
 
