--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1217,6 +1217,37 @@
       reportNumber   = "CERN-PH-TH-2013-143, KIAS-P13032",
       SLACcitation   = "%%CITATION = ARXIV:1306.4107;%%",
 }
+
+@article{Lee:2012ph,
+	author         = "Lee, Hyun Min and Park, Myeonghun and Sanz, Veronica",
+	title          = "{Interplay between Fermi gamma-ray lines and collider
+	searches}",
+	journal        = "JHEP",
+	volume         = "1303",
+	pages          = "052",
+	doi            = "10.1007/JHEP03(2013)052",
+	year           = "2013",
+	eprint         = "1212.5647",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2012-340",
+	SLACcitation   = "%%CITATION = ARXIV:1212.5647;%%",
+}
+
+@article{Lee:2014caa,
+	author         = "Lee, Hyun Min and Park, Myeonghun and Sanz, Veronica",
+	title          = "{Gravity-mediated (or Composite) Dark Matter Confronts
+	Astrophysical Data}",
+	journal        = "JHEP",
+	volume         = "1405",
+	pages          = "063",
+	doi            = "10.1007/JHEP05(2014)063",
+	year           = "2014",
+	eprint         = "1401.5301",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1401.5301;%%",
+}
 @article{Allanach:2002gn,
       author         = "Allanach, B.C. and Odagiri, K. and Palmer, M.J. and
                         Parker, Michael Andrew and Sabetfakhri, A. and others",
