--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -357,8 +357,9 @@ and takes into account the projected sensitivities for the mono-jet analysis.
 
 Considering simplified models also allows to discuss constraints from different search channels. In the case of the \schannel exchange, the results from the mono-jet final states, where the mediator decays to a DM pair, one can also take into account dijet constraints on the processes where the mediator decays back to Standard Model particles. The importance of the dijet results depend on the magnitude of the coupling $\gq$. We recommend to keep the two channels rather independent by choosing $\gq=0.25$ and $\gDM=1$, based on the findings given in Ref.\,\cite{Chala:2015ama}. Furthermore, it is also important to mention this choice leads to $\Gamma_{\rm{min}}/\mMed \lsim 0.06$. Note that the usual choice of $\gq=\gDM=1$ used in literature leads to $\Gamma_{\rm{min}}/\mMed \sim 0.5$, questioning the applicability of the narrow width approximation.
 
-Projected sensitivities for a 14~\tev\, mono-jet analysis are available from ATLAS~\cite{ATL-PHYS-PUB-2014-007}. The expected upper limit at 95\% confidence level on the product of cross section, acceptance and efficiency, $\sigma\times A\times\epsilon$, in the final Run-1 ATLAS mono-jet analysis\,\cite{Aad:2015zva} is 51\,fb and 7.2\,fb  for $\MET>300$~\gev and $\MET>500$~\gev, respectively. These ATLAS studies estimate a factor of two increase in sensitivity with the 2015 data. Given that cross section for $W/Z+$jets processes increases by roughly a factor 2 %\Todo{Can we get more precise number and a citation? Is this in Sarah's V+jets paper?} 
-when going from $\sqrt{s}=8$~\tev to 13~\tev, similar fiducial cross section limits can be expected with the first Run-2 data as from the final Run-1 analysis.
+The expected upper limit at 95\% confidence level on the product of cross section, acceptance and efficiency, $\sigma\times A\times\epsilon$, in the final Run-1 ATLAS mono-jet analysis\,\cite{Aad:2015zva} is 51\,fb and 7.2\,fb  for $\MET>300$~\gev and $\MET>500$~\gev, respectively. Projected sensitivities for a 14~\tev\, mono-jet analysis are available from ATLAS~\cite{ATL-PHYS-PUB-2014-007}. These ATLAS studies estimate a factor of two increase in sensitivity with the 2015 data. 
+%Given that cross section for $W/Z+$jets processes increases by roughly a factor 2 %\Todo{Can we get more precise number and a citation? Is this in Sarah's V+jets paper?} 
+%when going from $\sqrt{s}=8$~\tev to 13~\tev, similar fiducial cross section limits can be expected with the first Run-2 data as from the final Run-1 analysis.
 The generator level cross section times efficiency times acceptance at $\MET>500$~\gev for the model with couplings $\gq=0.25$ and $\gDM=1$, a light Dark Matter particle of
 \mDM=10~\gev and a \mMed=1~\tev vector mediator is at the order of 100\,fb, i.e. the early Run-2 mono-jet analysis is going to be sensitive to heavier mediators than this. The value of $\sigma\times \epsilon \times A$ at $\MET>500$~\gev for a 5~\tev vector mediator is at the order of 0.1\,fb, therefore this model lies beyond the reach of the LHC in the early Run-2. However, models with high enough mediators are still useful to reproduce the EFT result.
 
@@ -862,6 +863,9 @@ be in reach of early LHC searches, this model can be generated for W, Z and phot
 in order to reproduce the kinematics of contact interaction operators that are further 
 described in Section~\ref{sub:EW_EFT_Dim5}, to aid later reinterpretation.  
 
+Other models of dark matter that couple dominantly to electroweak gauge bosons through either
+pseudo-scalar or vector mediators can be found in Ref.~\cite{Lee:2012ph}.
+
 %\subsection{Model implementation}
 %
 %These models are generated at leading
@@ -888,7 +892,7 @@ described in Section~\ref{sub:EW_EFT_Dim5}, to aid later reinterpretation.
 \section{ \Spintwo mediator}
 \label{sec:spintwo}
 
-In models with extra dimensions, the Kaluza-Klein excitations of the graviton could also serve as a mediator between the Standard Model and dark sector physics. This kind of model was not studied in the forum and is not included in the recommendations, but models such as Ref.~\cite{Lee:2013bua} may warrant further study on a longer timescale. 
+In models with extra dimensions, the Kaluza-Klein excitations of the graviton could also serve as a mediator between the Standard Model and dark sector physics. This kind of model was not studied in the forum and is not included in the recommendations, but models such as Ref.~\cite{Lee:2013bua,Lee:2014caa} may warrant further study on a longer timescale. 
 
 % \begin{figure}
 %   \centering
